# Hubble-CIB-Public

./: .Rhistory  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
config/: flags.yaml
hubble_hunters/: version.py
hubble_hunters/analysis/: deep_field_plots.py  filter_plots.py  plots.py  update_plots.py
hubble_hunters/data/archive_out_raw/: Fornax_hst_53.084_-27.873.txt
hubble_hunters/data/calibrated_csv/: M31-T3.csv  cosmos_field_F435W-2018-10-19.csv  cosmos_field_F606W-2018-10-19.csv  cosmos_field_F815-2018-10-19.csv  deep_sky-2018-10-19.csv  good_data-2018-10-19.csv
hubble_hunters/data/star_view_raw/: cosmos_field_F435W.csv  cosmos_field_F606W.csv  cosmos_field_F815.csv  deep_sky.csv  good_data.csv
hubble_hunters/imports/: Huntsman.jsn
hubble_hunters/utils/: archive_search.py  catalog.py  conditional_pipeline.py  out_py.txt  photometry.py  time_date.py
machine_learner/examples/: pca.R
machine_learner/examples/data_visualisation/: visuals.R
machine_learner/hand_analysis/: manual.R
machine_learner/knn/: knn_learner.R
machine_learner/linear_regression/: regression_learner.R
machine_learning/examples/: busy_day.R  hubble_plots.R
r_hubble_hunters/comp777/: lin_regress.R
r_hubble_hunters/data/: SN2005CZ.csv
