[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
author = Sarah Caddy
description = Code related to feasibility simulations and analysis of HST data and extracting the CIB
version=__version__,
edit_on_github = True
github_project = AstroHuntsman/Hubble-CIB
license = MIT
long_description = Code related to feasibility simulations and analysis of HST data and extracting the CIB
package_name = hubble_hunters
